Izmene: pom.xml: dodat resources direktorijum Administrator.java: jmbg je long posto integer ne moze da sacuva 13 cifara Dostavljac.java: jmbg je long posto integer ne moze da sacuva 13 cifara GlavniEkran.java: dodate metode za postavljanje dostavljaca i administratora Login.java: ucitavanje podataka iz fajla i provera kredencijala RadSaFajlom.java: citanje fajlova i parsiranje podataka IzvorPodataka.java: podaci iz fajlova se ucitavaju u ovaj objekat i cuvaju u memoriji dok program radi administrator.txt i dostavljac.txt: teks fajlovi sa podacima

--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,13 @@
   <artifactId>ftn.vu</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Fast Food</name>
+  
+  <build>
+   <resources>
+     <resource>
+       <directory>src/main/resources</directory>
+     </resource>
+   </resources>
+ </build>
+  
 </project>
